# quantis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
quantis/: __init__.py  api.py  cli.py  report.py
quantis/ai/: __init__.py  copilot.py  models.py  registry.py  shadow.py  train.py
quantis/audit/: audit.py
quantis/backtest/: __init__.py  costs.py  engine.py  metrics.py  vectorized.py
quantis/broker/: __init__.py  base.py  dryrun.py  sim.py  zerodha.py
quantis/data/: ingest.py  store.py  universe.py
quantis/ems/: ems.py
quantis/features/: __init__.py  core.py
quantis/feed/: __init__.py  delayed.py  replay.py
quantis/fstore/: __init__.py  store.py
quantis/live/: __init__.py  engine.py
quantis/oms/: __init__.py  oms.py
quantis/paper/: __init__.py  engine.py
quantis/research/: __init__.py  tracking.py  walkforward.py
quantis/risk/: __init__.py  engine.py  limits.py  live.py
quantis/strategies/: __init__.py  ai_signal.py  base.py  ma_crossover.py  mean_reversion.py  momentum.py
tests/: test_ai_models.py  test_ai_pipeline.py  test_ai_registry.py  test_api.py  test_audit.py  test_broker_sim.py  test_copilot.py  test_costs.py  test_ems.py  test_engine.py  test_feature_store.py  test_live_engine.py  test_live_risk.py  test_metrics.py  test_no_lookahead.py  test_oms.py  test_paper_engine.py  test_risk_engine.py  test_tracking.py  test_walkforward.py  test_zerodha_adapter.py
web/research-workspace/: index.html
