[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantis"
version = "0.1.0"
description = "Quantis — AI quantitative research and execution platform for Indian equities and derivatives (Phase 1 MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40"]
analytics = ["duckdb>=0.10"]
dev = ["pytest>=7.4"]

[project.scripts]
quantis = "quantis.cli:main"

[tool.setuptools.packages.find]
include = ["quantis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
