[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantis"
version = "0.5.0"
description = "Quantis — AI quantitative research and execution platform for Indian equities and derivatives (Phase 5: live trading)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40"]
analytics = ["duckdb>=0.10"]
research = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "mlflow-skinny>=2.10",
]
ai = [
    "lightgbm>=4.0",
    "anthropic>=0.40",
]
live = ["kiteconnect>=5.0"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
quantis = "quantis.cli:main"

[tool.setuptools.packages.find]
include = ["quantis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
